Fixes wrapping issue that was causing a huge button (#4618)

--- a/client/me/help/style.scss
+++ b/client/me/help/style.scss
@@ -25,7 +25,7 @@
 }
 
 .help__support-link-button {
-	flex: 0 0 106px; // make sure that the width doesn't shrink
+	flex: 0 0 auto;
 	align-self: center;
 }
 
